--- a/UI/Common/UserPreferences.xaml
+++ b/UI/Common/UserPreferences.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    Title="User Preferences" Height="750" Width="482" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
+    Title="User Preferences" Height="780" Width="482" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
 	
     <Grid Margin="10,10,10,10">
 		<Grid.ColumnDefinitions>
@@ -34,6 +34,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="*"></RowDefinition>
 		</Grid.RowDefinitions>        
         
@@ -160,9 +161,14 @@
         <ComboBox Grid.Column="1" Grid.Row="22" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=ProcessorRunCollection}" SelectedValuePath="ProcessorRunId" DisplayMemberPath="Name"
 				            SelectedValue="{Binding Path=UserPreference.WeekendProcessorRunId}" />
 
-        <Button Name="ButtonTestBlockPrinter" Grid.Column="0" Grid.Row="23" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="ButtonTestBlockPrinter_Click"  Width="130" Height="30">Test Cassette Printer</Button>
+        <TextBlock Grid.Column="0" Grid.Row="23" Margin="2,2,2,2" VerticalAlignment="Center" TextAlignment="Right">Cytology Slide Printer:</TextBlock>
+        <ComboBox Grid.Column="1" Grid.Row="23" ItemsSource="{Binding Path=PrintQueueCollection}" DisplayMemberPath="Name"  Margin="2,2,2,2"
+                  HorizontalAlignment="Stretch" Text="{Binding Path=UserPreference.CytologySlidePrinter}">
+        </ComboBox>
 
-		<StackPanel Grid.Column="1" Grid.Row="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">            
+        <Button Name="ButtonTestBlockPrinter" Grid.Column="0" Grid.Row="24" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="ButtonTestBlockPrinter_Click"  Width="130" Height="30">Test Cassette Printer</Button>
+
+		<StackPanel Grid.Column="1" Grid.Row="25" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">            
             <Button Name="ButtonOK" Margin="2" HorizontalAlignment="Center" Click="ButtonOK_Click" Width="50" Height="30">OK</Button>
             <Button Name="ButtonCancel" Margin="2" HorizontalAlignment="Center" Click="ButtonCancel_Click" Width="50" Height="30">Cancel</Button>
         </StackPanel>
