--- a/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
+++ b/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
@@ -40,11 +40,11 @@
 
         <Grid Grid.Row="1" Margin="5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0" Grid.Row="1" Margin="2,2,2,2">
+            <Grid Grid.Column="0" Grid.Row="0" Margin="2,2,2,2">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -72,19 +72,18 @@
 
             </Grid>
 
-            <Grid Grid.Column="0" Grid.Row="1" Margin="2,2,2,2">
+            <Grid Grid.Column="1" Grid.Row="0" Margin="2,2,2,2">
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>                    
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>                    
                 </Grid.RowDefinitions>
 
+                <Button Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddThinPrepSlide_Click">Add Thin Prep Slide</Button>
+                <Button Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddPantherTube_Click">Add Panther Tube</Button>
             </Grid>
             
         </Grid>
