--- a/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
+++ b/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
@@ -71,6 +71,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
 
@@ -83,14 +84,15 @@
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Specimen:</TextBlock>
                 <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=SpecimenOrder.SpecimenDescriptionString}"></TextBlock>
 
-                <ListBox Name="ListBoxAliquots" Grid.Column="0" Grid.Row="3" ItemsSource="{Binding Path=SpecimenOrder.AliquotOrderCollection}" HorizontalAlignment="Stretch" ItemTemplate="{StaticResource ListBoxDataTemplate}"></ListBox>                               
-
+                <ListBox Name="ListBoxAliquots" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" ItemsSource="{Binding Path=SpecimenOrder.AliquotOrderCollection}" HorizontalAlignment="Stretch" ItemTemplate="{StaticResource ListBoxDataTemplate}"></ListBox>                               
+                <Button Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonReprintSelected_Click" HorizontalAlignment="Left">Reprint Selected Item</Button>
             </Grid>
 
             <Grid Grid.Column="1" Grid.Row="0" Margin="2,2,2,2">
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"></ColumnDefinition>                    
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"></RowDefinition>
@@ -98,16 +100,14 @@
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <Button Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddThinPrepSlide_Click">Add Thin Prep Slide</Button>
-                <Button Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddPantherTube_Click">Add Panther Tube</Button>
-                <Button Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonReprintSelected_Click">Reprint Selected Item</Button>
+                <Button Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonFinished_Click" HorizontalAlignment="Right" VerticalAlignment="Top">Finished</Button>
+                <Button Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddThinPrepSlide_Click">Add Thin Prep Slide</Button>
+                <Button Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddPantherAliquot_Click">Add Panther Aliquot</Button>
+                
                 
             </Grid>
             
-        </Grid>
-        
-        <Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
+        </Grid>               
 
 	</Grid>
 </UserControl>
