--- a/UI/Test/ALKForNSCLCByFISHResultPage.xaml
+++ b/UI/Test/ALKForNSCLCByFISHResultPage.xaml
@@ -107,7 +107,7 @@
                                         
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Result:</TextBlock>
                     <ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding Path=ResultCollection}" DisplayMemberPath="ResultDisplayText" 
-							  SelectedValue="{Binding Path=PanelSetOrder.Result}" SelectedValuePath="Result" HorizontalAlignment="Stretch" SelectionChanged="ComboBoxResult_SelectionChanged"/>
+							  SelectedValue="{Binding Path=PanelSetOrder.ResultCode}" SelectedValuePath="ResultCode" HorizontalAlignment="Stretch" SelectionChanged="ComboBoxResult_SelectionChanged"/>
                     
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Ordered On:</TextBlock>
                     <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
