--- a/UI/MaterialTracking/MaterialTrackingCasePage.xaml
+++ b/UI/MaterialTracking/MaterialTrackingCasePage.xaml
@@ -85,27 +85,21 @@
             <TabItem Header="Hello">
                 <Grid Grid.Row="1" Margin="5">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
 
-                    <Border Grid.Row="0" Grid.Column="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-
-                    <Grid Grid.Column="0" Margin="10" Width="120">
+                    <Grid Grid.Column="0">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="20"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="*"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
+						<TreeView Name="TreeViewSpecimenOrder" Grid.Column="0"  Grid.Row="0" ItemsSource="{Binding Path=AccessionOrder.SpecimenOrderCollection}"
+							ItemTemplate="{StaticResource DataTemplateSpecimenOrder}" Margin="2,2,2,2" BorderThickness="1">
+						</TreeView>
 
-                    </Grid>
+					</Grid>
+					
                     <Grid Grid.Column="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -123,7 +117,7 @@
                                     <GridViewColumn Header="Action" DisplayMemberBinding="{Binding Path=Action}" Width="150" />
                                     <GridViewColumn Header="Label" DisplayMemberBinding="{Binding Path=MaterialLabel}" Width="150" />
                                     <GridViewColumn Header="Facility" DisplayMemberBinding="{Binding Path=FacilityId}" Width="80" />
-                                    <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Path=LocationName}" Width="250" />
+                                    <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Path=LocationName}" Width="225" />
                                 </GridView>
                             </ListView.View>
                         </ListView>
