--- a/UI/MaterialTracking/MaterialTrackingCasePage.xaml
+++ b/UI/MaterialTracking/MaterialTrackingCasePage.xaml
@@ -18,7 +18,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding Path=ClientAccessioned}" Margin="2,2,2,2"></CheckBox>
+                <CheckBox Grid.Column="0" Grid.Row="0" Margin="2,2,2,2"></CheckBox>
                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="Slide"></TextBlock>
                 <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}"></TextBlock>
 
@@ -39,19 +39,17 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding Path=ClientAccessioned}" Margin="2,2,2,2"></CheckBox>
+                <CheckBox Grid.Column="0" Grid.Row="0" Margin="2,4,2,2"></CheckBox>
                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=AliquotType}"></TextBlock>
-                <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}"></TextBlock>
-                <TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=ClientLabel}" Width="50"></TextBox>
+				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}" MaxWidth="160" TextWrapping="Wrap"></TextBlock>
 
             </Grid>
         </HierarchicalDataTemplate>
 
         <HierarchicalDataTemplate x:Key="DataTemplateSpecimenOrder" ItemsSource="{Binding Path=AliquotOrderCollection}" ItemTemplate="{StaticResource DataTemplateAliquotOrder}">
-            <Grid Margin="2,2,2,2">
+            <Grid>
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
@@ -59,9 +57,8 @@
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding Path=ClientAccessioned}" Margin="2,2,2,2"></CheckBox>
-                <TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=ClientSpecimenNumber}" Width="50"></TextBox>
-                <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=SpecimenDescriptionString}" FontWeight="Bold"></TextBlock>
+                <CheckBox Grid.Column="0" Grid.Row="0" Margin="2,4,2,2" VerticalAlignment="Top"></CheckBox>
+                <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=SpecimenDescriptionString}" FontWeight="Bold" MaxWidth="225" TextWrapping="Wrap"></TextBlock>
 
             </Grid>
         </HierarchicalDataTemplate>
@@ -81,58 +78,57 @@
 		<Border Grid.Row="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 		<TextBlock Grid.Column="0" Grid.Row="0" Margin="20,2,2,2" Text="{Binding Path=PageHeaderText}" VerticalAlignment="Center" Foreground="White" FontSize="16" FontWeight="Bold"></TextBlock>
 
-        <TabControl Grid.Column="0" Grid.Row="1">
-            <TabItem Header="Hello">
-                <Grid Grid.Row="1" Margin="5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="2*"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
+		<Grid Grid.Row="1">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*"></RowDefinition>
+			</Grid.RowDefinitions>
+			
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto"></ColumnDefinition>
+				<ColumnDefinition Width="*"></ColumnDefinition>
+			</Grid.ColumnDefinitions>
 
-                    <Grid Grid.Column="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                        </Grid.RowDefinitions>
+			<TreeView Name="TreeViewSpecimenOrder" Grid.Column="0"  Grid.Row="0" Width="270" ItemsSource="{Binding Path=AccessionOrder.SpecimenOrderCollection}"
+								ItemTemplate="{StaticResource DataTemplateSpecimenOrder}" BorderThickness="1">
+			</TreeView>
 
-						<TreeView Name="TreeViewSpecimenOrder" Grid.Column="0"  Grid.Row="0" ItemsSource="{Binding Path=AccessionOrder.SpecimenOrderCollection}"
-							ItemTemplate="{StaticResource DataTemplateSpecimenOrder}" Margin="2,2,2,2" BorderThickness="1">
-						</TreeView>
+			<TabControl Grid.Column="1" Grid.Row="0">
+				<TabItem Header="Hello">
+					<Grid Grid.Row="0" Margin="5">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto"></RowDefinition>
+						</Grid.RowDefinitions>
+
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*"></ColumnDefinition>
+						</Grid.ColumnDefinitions>
+
+						<ListView Name="ListBoxMaterialTrackingBatch" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" BorderBrush="Black" BorderThickness="1"
+								  ItemsSource="{Binding Path=MaterialTrackingLogCollection}" HorizontalAlignment="Stretch">
+							<ListView.View>
+								<GridView>
+									<GridViewColumn Header="Log Date" DisplayMemberBinding="{Binding Path=LogDate, Converter={StaticResource MilitaryDateTimeConverter}}" Width="120" />
+									<GridViewColumn Header="Action" DisplayMemberBinding="{Binding Path=Action}" Width="150" />
+									<GridViewColumn Header="Label" DisplayMemberBinding="{Binding Path=MaterialLabel}" Width="150" />
+									<GridViewColumn Header="Facility" DisplayMemberBinding="{Binding Path=FacilityId}" Width="80" />
+									<GridViewColumn Header="Location" DisplayMemberBinding="{Binding Path=LocationName}" Width="225" />
+								</GridView>
+							</ListView.View>
+						</ListView>
 
 					</Grid>
 					
-                    <Grid Grid.Column="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"></RowDefinition>
-                        </Grid.RowDefinitions>
-
-                        <ListView Name="ListBoxMaterialTrackingBatch" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" BorderBrush="Black" BorderThickness="1"
-					ItemsSource="{Binding Path=MaterialTrackingLogCollection}" HorizontalAlignment="Stretch">
-                            <ListView.View>
-                                <GridView>
-                                    <GridViewColumn Header="Log Date" DisplayMemberBinding="{Binding Path=LogDate, Converter={StaticResource MilitaryDateTimeConverter}}" Width="120" />
-                                    <GridViewColumn Header="Action" DisplayMemberBinding="{Binding Path=Action}" Width="150" />
-                                    <GridViewColumn Header="Label" DisplayMemberBinding="{Binding Path=MaterialLabel}" Width="150" />
-                                    <GridViewColumn Header="Facility" DisplayMemberBinding="{Binding Path=FacilityId}" Width="80" />
-                                    <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Path=LocationName}" Width="225" />
-                                </GridView>
-                            </ListView.View>
-                        </ListView>
-
-                    </Grid>
-                </Grid>
-            </TabItem>
-            <TabItem Header="Send">
+				</TabItem>
+				
+				<TabItem Header="Send">
                 
-            </TabItem>
-            <TabItem Header="Receive">
+				</TabItem>
+				<TabItem Header="Receive">
 
-            </TabItem>
-        </TabControl>
-		
+				</TabItem>
+			</TabControl>
+
+		</Grid>
 
 		<Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
