--- a/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
+++ b/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
@@ -2,12 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:Cytology="clr-namespace:YellowstonePathology.UI.Cytology"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
-    <Grid>        
-        <Grid.Resources>                                   
-        
-        </Grid.Resources>
-        
+    <UserControl.Resources>
+        <Cytology:TrackedItemStatusColorConverter x:Key="TrackedItemStatusColorConverter"/>
+    </UserControl.Resources>
+    <Grid>                        
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition></ColumnDefinition>
 		</Grid.ColumnDefinitions>
@@ -51,7 +51,7 @@
 
             </Grid>                       
 
-            <ListBox Name="ListBoxAliquots" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="0,20,0,20" ItemsSource="{Binding Path=SpecimenOrder.AliquotOrderCollection}" 
+            <ListBox Name="ListBoxAliquots" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="0,20,0,20" Height="220" ItemsSource="{Binding Path=SpecimenOrder.AliquotOrderCollection}" 
                      HorizontalAlignment="Center" BorderThickness="0">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -60,24 +60,35 @@
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Grid Margin="2,2,2,2" Width="200" Height="200" Background="#f033d0">
+                        <Border>
+                            <Border.Style>
+                                <Style>
+                                    <Setter Property="Border.BorderBrush" Value="{Binding Path=Status, Converter={StaticResource TrackedItemStatusColorConverter}}"/>
+                                    <Setter Property="Border.BorderThickness" Value="5"/>
+                                    <Style.Triggers>
+                                        <Trigger Property="Border.IsMouseOver" Value="True">
+                                            <Setter Property="Border.BorderThickness" Value="7" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Border.Style>
+                            <Grid Margin="2,2,2,2" Width="200" Height="200">
 
-                            <Grid.ColumnDefinitions>                                
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"></RowDefinition>
-                                <RowDefinition Height="Auto"></RowDefinition>
-                                <RowDefinition Height="Auto"></RowDefinition>
-                                <RowDefinition Height="*"></RowDefinition>
-                            </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"></RowDefinition>
+                                    <RowDefinition Height="Auto"></RowDefinition>
+                                    <RowDefinition Height="Auto"></RowDefinition>
+                                    <RowDefinition Height="*"></RowDefinition>
+                                </Grid.RowDefinitions>
 
-                            <Border Grid.Column="0" Grid.Row="0" BorderBrush="Black" BorderThickness="1"></Border>
-                            <TextBlock Grid.Column="1" Grid.Row="0" Margin="5,5,5,5" Text="{Binding Path=AliquotType}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Column="1" Grid.Row="0" Margin="5,5,5,5" Text="{Binding Path=ValidatedBy}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Column="1" Grid.Row="0" Margin="5,5,5,5" Text="{Binding Path=ValidationDate}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
-
-                        </Grid>
+                                <TextBlock Grid.Column="1" Grid.Row="0" Margin="5,5,5,5" Text="{Binding Path=AliquotType}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
+                                <TextBlock Grid.Column="1" Grid.Row="1" Margin="5,5,5,5" Text="{Binding Path=ValidatedBy}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
+                                <TextBlock Grid.Column="1" Grid.Row="2" Margin="5,5,5,5" Text="{Binding Path=ValidationDate, Converter={StaticResource MilitaryDateTimeConverter}}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
+                            </Grid>
+                        </Border>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
