Add Daily Task History Button in Login Workspace

--- a/UI/Login/LoginWorkspace.xaml
+++ b/UI/Login/LoginWorkspace.xaml
@@ -279,6 +279,13 @@
 								</StackPanel>
 							</Button>
 
+							<Button Margin="2" Click="ButtonDailyTaskOrderHistory_Click">
+								<StackPanel Orientation="Horizontal">
+									<Image Source="/Resources/Batch.ico"></Image>
+									<TextBlock Margin="2,0,0,0">History</TextBlock>
+								</StackPanel>
+							</Button>
+
 						</ToolBar>
 					</ToolBarTray>
 
