--- a/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
+++ b/UI/Cytology/ThinPrepPapSlidePrintingPage.xaml
@@ -12,7 +12,12 @@
 			<ColumnDefinition></ColumnDefinition>
 		</Grid.ColumnDefinitions>
 
-        <Button Grid.Column="0" Margin="2,2,2,2" Width="200" Height="100" Click="ButtonFinished_Click" HorizontalAlignment="Right" VerticalAlignment="Top">Finished</Button>
+        <StackPanel Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Right">
+            <Button Margin="2,2,2,2" Width="200" Height="100" Click="ButtonFinished_Click">Finished</Button>
+            <Button Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddThinPrepSlide_Click">Add Thin Prep Slide</Button>
+            <Button Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddPantherAliquot_Click">Add Panther Aliquot</Button>
+            <Button Margin="2,2,2,2" Width="200" Height="100" Click="ButtonReprintSelected_Click">Reprint</Button>
+        </StackPanel>        
         
         <Grid Grid.Column="0" Margin="2,2,2,2" HorizontalAlignment="Center" VerticalAlignment="Center">
 
@@ -20,7 +25,6 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>                
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>                
             </Grid.RowDefinitions>
@@ -51,7 +55,8 @@
 
             </Grid>                       
 
-            <ListBox Name="ListBoxAliquots" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="0,20,0,20" Height="220" ItemsSource="{Binding Path=SpecimenOrder.AliquotOrderCollection}" 
+            <ListBox Name="ListBoxAliquots" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="2,2,2,2" Height="240" ItemsSource="{Binding Path=SpecimenOrder.AliquotOrderCollection}" 
+                     MouseUp="ListBoxAliquots_MouseUp"
                      HorizontalAlignment="Center" BorderThickness="0">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -85,19 +90,14 @@
                                 </Grid.RowDefinitions>
 
                                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="5,5,5,5" Text="{Binding Path=AliquotType}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
-                                <TextBlock Grid.Column="1" Grid.Row="1" Margin="5,5,5,5" Text="{Binding Path=ValidatedBy}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
-                                <TextBlock Grid.Column="1" Grid.Row="2" Margin="5,5,5,5" Text="{Binding Path=ValidationDate, Converter={StaticResource MilitaryDateTimeConverter}}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
+                                <TextBlock Grid.Column="1" Grid.Row="1" Margin="5,5,5,5" Text="{Binding Path=Status}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
+                                <TextBlock Grid.Column="1" Grid.Row="2" Margin="5,5,5,5" Text="{Binding Path=ValidatedBy}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
+                                <TextBlock Grid.Column="1" Grid.Row="3" Margin="5,5,5,5" Text="{Binding Path=ValidationDate, Converter={StaticResource MilitaryDateTimeConverter}}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
                             </Grid>
                         </Border>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
-            </ListBox>
-
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">                    
-                <Button Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddThinPrepSlide_Click">Add/Print Thin Prep Slide</Button>
-                <Button Margin="2,2,2,2" Width="200" Height="100" Click="ButtonAddPantherAliquot_Click">Add/Print Panther Aliquot</Button>
-                <Button Margin="2,2,2,2" Width="200" Height="100" Click="ButtonReprintSelected_Click">Reprint</Button>
-            </StackPanel>
+            </ListBox>            
                                 
         </Grid>                                       
 
