--- a/UI/Surgical/TypingWorkspace.xaml
+++ b/UI/Surgical/TypingWorkspace.xaml
@@ -37,8 +37,8 @@
 				<RowDefinition Height="Auto"></RowDefinition>
 				<RowDefinition Height="Auto"></RowDefinition>
 				<RowDefinition Height="*"></RowDefinition>
-			</Grid.RowDefinitions>
-
+			</Grid.RowDefinitions>                     
+            
 			<TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="2,2,2,2" FontWeight="Bold">Name:</TextBlock>
 			<TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="2,2,2,2" FontWeight="Bold">Birthdate:</TextBlock>
 			<TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="2,2,2,2" FontWeight="Bold">Physician:</TextBlock>
@@ -85,7 +85,13 @@
 						<TextBlock Margin="2" VerticalAlignment="Center">Refresh</TextBlock>
 					</StackPanel>
 				</Button>
-			</StackPanel>
+                <Button Click="ButtonLast_Click" Margin="2,2,2,2" VerticalAlignment="Center">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Resources/Restore.png" Margin="2" Height="16"></Image>
+                        <TextBlock Margin="2" VerticalAlignment="Center">Last</TextBlock>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
 
             <TextBox Grid.Column="3" Grid.Row="1" Text="{Binding Path=AccessionOrder.CollectionDate, Converter={StaticResource ShortDateConverter}}" VerticalAlignment="Center" Margin="2,2,30,2"/>
 			<TextBlock Grid.Column="3" Grid.Row="2" Text="{Binding Path=AccessionOrder.AccessionDate, Converter={StaticResource ShortDateConverter}}" VerticalAlignment="Center" Margin="2,2,2,2"></TextBlock>
@@ -334,8 +340,7 @@
 											<TextBlock Text="{Binding Path=SurgicalSpecimen.DiagnosisIdFormatted}" Margin="5">
 												<TextBlock.ContextMenu>
 													<ContextMenu Opened="ContextMenu_Opened">
-														<MenuItem Tag="{Binding}" Header="Add CPT Codes" Click="ContextMenuAddCptCodes_Click"></MenuItem>                                                        
-                                                        <MenuItem Tag="{Binding}" Header="Gross Template" Click="ContextMenuGrossTemplate_Click"></MenuItem>                                                        
+														<MenuItem Tag="{Binding}" Header="Add CPT Codes" Click="ContextMenuAddCptCodes_Click"></MenuItem>
 													</ContextMenu>
 												</TextBlock.ContextMenu>
 											</TextBlock>
@@ -762,7 +767,19 @@
 			<StatusBarItem>
 				<TextBlock Width="60" Margin="2" TextAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=SurgicalTestOrder.ReportNo}"></TextBlock>
 			</StatusBarItem>
-		</StatusBar>
+        
+            <StatusBarItem HorizontalAlignment="Right">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="2,2,10,2">
+                        <Hyperlink Click="HyperLinkShowProviderDistribution_Click">Provider Distribution</Hyperlink>
+                    </TextBlock>
+                    <TextBlock Margin="2,2,2,2">
+                        <Hyperlink Click="HyperLinkShowGossTemplate_Click">Gross Templates</Hyperlink>
+                    </TextBlock>
+                </StackPanel>                
+            </StatusBarItem>                       
+        
+        </StatusBar>
 
 	</Grid>
 </UserControl>
