--- a/UI/Test/FrozenFinalDialog.xaml
+++ b/UI/Test/FrozenFinalDialog.xaml
@@ -89,13 +89,58 @@
 			<TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=AccessionOrder.AccessionDate, Converter={StaticResource ShortDateConverter}}"></TextBlock>
 
 			<TextBlock Grid.Column="0" Grid.Row="3" Style="{StaticResource LogTextBlock}">StartTime:</TextBlock>
-			<TextBox Name="TextBoxStartTime" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" Margin="2,2,2,2" 
-					 Text="{Binding Path=IntraoperativeConsultation.StartDate, TargetNullValue='', StringFormat='MM/dd/yyyy HH:mm'}" />
+			<TextBox Name="TextBoxStartTime" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" Margin="2,2,2,2"
+					 Text="{Binding Path=IntraoperativeConsultation.StartDateBinding, ValidatesOnDataErrors=True}" 
+                         FontSize="14" Background="{Binding Path=IntraoperativeConsultation.StartDateBackgroundColorBinding}" ToolTipService.ShowOnDisabled="True">
+				<TextBox.Style>
+					<Style TargetType="{x:Type Control}">
+						<Setter Property="Validation.ErrorTemplate">
+							<Setter.Value>
+								<ControlTemplate>
+									<Border BorderBrush="Red" BorderThickness="2,1,2,1">
+										<AdornedElementPlaceholder/>
+									</Border>
+								</ControlTemplate>
+							</Setter.Value>
+						</Setter>
+						<Style.Triggers>
+							<Trigger Property="Validation.HasError" Value="True">
+								<Setter Property="ToolTip" Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={x:Static RelativeSource.Self}}"/>
+							</Trigger>
+						</Style.Triggers>
+					</Style>
+				</TextBox.Style>
+			</TextBox>
+
+
+
 
 			<TextBlock Grid.Column="2" Grid.Row="3" Style="{StaticResource LogTextBlock}">End Time:</TextBlock>
-			<TextBox Name="TextBoxEndTime" Grid.Column="3" Grid.Row="3" HorizontalAlignment="Stretch" Margin="2,2,2,2" 
-					 Text="{Binding Path=IntraoperativeConsultation.EndDate, TargetNullValue='', StringFormat='MM/dd/yyyy HH:mm'}" />               
-        
+			<!--<TextBox Name="TextBoxEndTime" Grid.Column="3" Grid.Row="3" HorizontalAlignment="Stretch" Margin="2,2,2,2" 
+					 Text="{Binding Path=IntraoperativeConsultation.EndDate, TargetNullValue='', StringFormat='MM/dd/yyyy HH:mm'}" />-->
+			<TextBox Name="TextBoxEndTime" Grid.Column="3" Grid.Row="3" HorizontalAlignment="Stretch" Margin="2,2,2,2"
+					 Text="{Binding Path=IntraoperativeConsultation.EndDateBinding, ValidatesOnDataErrors=True}" 
+                         FontSize="14" Background="{Binding Path=IntraoperativeConsultation.EndDateBackgroundColorBinding}" ToolTipService.ShowOnDisabled="True">
+				<TextBox.Style>
+					<Style TargetType="{x:Type Control}">
+						<Setter Property="Validation.ErrorTemplate">
+							<Setter.Value>
+								<ControlTemplate>
+									<Border BorderBrush="Red" BorderThickness="2,1,2,1">
+										<AdornedElementPlaceholder/>
+									</Border>
+								</ControlTemplate>
+							</Setter.Value>
+						</Setter>
+						<Style.Triggers>
+							<Trigger Property="Validation.HasError" Value="True">
+								<Setter Property="ToolTip" Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={x:Static RelativeSource.Self}}"/>
+							</Trigger>
+						</Style.Triggers>
+					</Style>
+				</TextBox.Style>
+			</TextBox>
+
 			<TextBlock Grid.Column="0" Grid.Row="4" Style="{StaticResource LogTextBlock}">Result:</TextBlock>
 			<TextBox Name="TextBoxResult" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextAlignment="Left" TextWrapping="Wrap" Text="{Binding Path=IntraoperativeConsultation.Result}" AcceptsReturn="True"></TextBox>
 
