Change string to CPTCode in Typing Cpt Code List Item

--- a/UI/CodeSelectionV2.xaml
+++ b/UI/CodeSelectionV2.xaml
@@ -35,7 +35,7 @@
 							</DataTemplate>
 						</GridViewColumn.CellTemplate>
 					</GridViewColumn>
-					<GridViewColumn DisplayMemberBinding="{Binding Path=CptCode}" Header="CPT Code" Width="100"/>					
+					<GridViewColumn DisplayMemberBinding="{Binding Path=CptCode.Code}" Header="CPT Code" Width="100"/>					
 				</GridView>
 			</ListView.View>
 		</ListView>
