--- a/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
+++ b/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
@@ -127,7 +127,8 @@
             <TreeView Name="TreeViewSpecimenOrder" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3" ItemsSource="{Binding Path=AccessionOrder.SpecimenOrderCollection}"
 							ItemTemplate="{StaticResource DataTemplateSpecimenOrder}" Margin="2,10,2,2" BorderThickness="1">
             </TreeView>
-            
+
+            <Button Grid.Column="0" Grid.Row="4" Click="ButtonUpdateTrackingLog_Click" Width="150" Height="50" HorizontalAlignment="Right" Margin="2,2,2,2">Update Tracking Log</Button>
             <Button Grid.Column="3" Grid.Row="4" Click="ButtonPrint_Click" Width="80" Height="50" HorizontalAlignment="Right" Margin="2,2,2,2">Print</Button>
 
         </Grid>
