--- a/UI/Client/ProviderEntry.xaml
+++ b/UI/Client/ProviderEntry.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ProviderEntry"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Provider Entry" Height="500" Width="620" WindowStartupLocation="CenterScreen">
+        Title="Provider Entry" Height="500" Width="1000" WindowStartupLocation="CenterScreen">
     <Grid Margin="5,5,5,5">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*"></RowDefinition>
@@ -66,15 +66,60 @@
 			</TabItem>
 			
 			<TabItem Header="Membership">
-				<ListBox Name="ListBoxClients" Margin="10" HorizontalAlignment="Stretch" BorderThickness="0" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}">
-					<ListBox.ItemTemplate>
-						<DataTemplate>
-							<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
-								<TextBlock Margin="2" Text="{Binding Path=ClientName}" />
-							</StackPanel>
-						</DataTemplate>
-					</ListBox.ItemTemplate>
-				</ListBox>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"></ColumnDefinition>
+						<ColumnDefinition Width="Auto"></ColumnDefinition>
+						<ColumnDefinition Width="*"></ColumnDefinition>
+					</Grid.ColumnDefinitions>
+
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"></RowDefinition>
+						<RowDefinition Height="*"></RowDefinition>
+					</Grid.RowDefinitions>
+
+					<Grid Grid.Column="0" Grid.Row="0">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto"></ColumnDefinition>
+							<ColumnDefinition Width="*"></ColumnDefinition>
+						</Grid.ColumnDefinitions>
+
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto"></RowDefinition>
+						</Grid.RowDefinitions>
+
+						<TextBlock Grid.Column="0" Grid.Row="0" Margin="5" Text="Client Name:" FontSize="14" />
+						<TextBox Name="TextBoxClientName" Grid.Column="1" Grid.Row="0" Margin="5" HorizontalAlignment="Stretch" TextChanged="TextBoxClientName_TextChanged" />
+					</Grid>
+					
+					<TextBlock Grid.Column="2" Grid.Row="0" Margin="5" Text="Member of:" HorizontalAlignment="Center" FontSize="14" />
+
+					<ListBox Name="ListBoxClientSelection" Grid.Column="0" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="0" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=ClientCollection}">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+									<TextBlock Margin="2" Text="{Binding Path=ClientName}" />
+								</StackPanel>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+					
+					<StackPanel Grid.Column="1" Grid.Row="1" Orientation="Vertical" Margin="2,2,2,2" VerticalAlignment="Center">
+						<Button Name="ButtonAddToClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonAddToClient_Click">Add >></Button>
+						<Button Name="ButtonRemoveFromClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonRemoveFromClient_Click">&lt;&lt; Remove</Button>
+					</StackPanel>
+
+					<ListBox Name="ListBoxClients" Grid.Column="2" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="0" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+									<TextBlock Margin="2" Text="{Binding Path=ClientName}" />
+								</StackPanel>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+					
+				</Grid>
 			</TabItem>
 		</TabControl>
 
